--- a/sample/res/layout/activity_main.xml
+++ b/sample/res/layout/activity_main.xml
@@ -31,17 +31,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Purchase"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="20dp"
             android:onClick="onClick"
             android:id="@+id/purchaseButton" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
             android:text="Consume"
             android:onClick="onClick"
             android:id="@+id/consumeButton"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Details"
+            android:onClick="onClick"
+            android:id="@+id/productDetailsButton"/>
 
     </LinearLayout>
 
@@ -72,15 +79,22 @@
             android:text="Subscribe"
             android:id="@+id/subscribeButton"
             android:onClick="onClick"
-            android:layout_marginRight="10dp" />
+            android:layout_marginRight="20dp" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
             android:text="Update"
             android:onClick="onClick"
             android:id="@+id/updateSubscriptionsButton" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Details"
+            android:onClick="onClick"
+            android:id="@+id/subsDetailsButton"/>
 
     </LinearLayout>
 
