Add test for Fragment

--- a/sample/res/layout/activity_main.xml
+++ b/sample/res/layout/activity_main.xml
@@ -119,6 +119,14 @@
 
         </LinearLayout>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Open Fragment"
+            android:id="@+id/showInFragment"
+            android:layout_marginTop="20dp"
+            android:onClick="onClick" />
+
     </LinearLayout>
 
 </ScrollView>
